fix: Prevent fontSize being too big on smaller screens

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -99,7 +99,7 @@ body {
 
         color: $--color-text;
 
-        font-size: 1.5rem;
+        font-size: min(6vw, 1.5rem);
 
         &:hover {
           background-color: #ffffff1e;
